--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "sanity-plugin-vercel-deploy",
+  "name": "sanity-plugin-cloudflare-pages-deploy",
   "version": "3.3.3",
-  "description": "Trigger Vercel Deploy Hooks from your Sanity Studio",
+  "description": "Trigger Cloudflare Pages Deploy Hooks from your Sanity Studio",
   "keywords": [
     "sanity",
     "sanity-plugin",
-    "vercel",
+    "cloudflare-pages",
     "deploy",
     "webhook"
   ],
-  "homepage": "https://github.com/ndimatteo/sanity-plugin-vercel-deploy#readme",
+  "homepage": "https://github.com/Natewich/sanity-plugin-cloudflare-pages-deploy#readme",
   "bugs": {
-    "url": "https://github.com/ndimatteo/sanity-plugin-vercel-deploy/issues"
+    "url": "https://github.com/Natewich/sanity-plugin-cloudflare-pages-deploy/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/ndimatteo/sanity-plugin-vercel-deploy.git"
+    "url": "git+ssh://git@github.com/Natewich/sanity-plugin-cloudflare-pages-deploy.git"
   },
   "license": "MIT",
-  "author": "Nick DiMatteo <hello@nickdimatteo.com>",
+  "author": "Nate van der Vis <natevandervis@gmail.com>",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -55,6 +55,7 @@
     "axios": "^0.24.0",
     "nanoid": "^3.1.20",
     "prop-types": "^15.7.2",
+    "sanity-plugin-cloudflare-pages-deploy": "link:.yalc/sanity-plugin-cloudflare-pages-deploy",
     "spacetime": "^6.16.0",
     "swr": "^1.1.1"
   },
